# ict.core

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  mise.toml
.github/workflows/: release.yml  testing.yml
cmake/: configure.cmake  doxygen.cmake
src/: CMakeLists.txt
src/include/ict/core/: bad_expected_access.hpp  concepts.hpp  expected.hpp  expected.void.hpp  formatters.hpp  print.hpp  unexpected.hpp  win_error.hpp
src/include/ict/core/io/: read.hpp  seek.hpp  write.hpp
src/include/ict/core/net/: ip_addr.hpp  ip_addr.v4.hpp  ip_addr.v6.hpp  sockaddr.hpp
src/include/ict/core/sync/: condvar.hpp  mutex.hpp  mutex.void.hpp  rwlock.hpp
src/include/ict/core/trait/: display.hpp  not_copyable.hpp
src/src/: formatters.cpp  lib.cpp  win_error.cpp
src/src/net/: ip_addr.cpp  ip_addr.v4.cpp  ip_addr.v6.cpp  sockaddr.cpp
tests/: CMakeLists.txt  condvar.cpp  expected.cpp  format.cpp  ip_addr.cpp  ip_addr.v4.cpp  ip_addr.v6.cpp  mutex.cpp  rwlock.cpp  unexpected.cpp
